[package]
name = "rmk-notebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
lines-are-rusty = { git = "https://github.com/ax3l/lines-are-rusty.git", branch = "develop" }
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1.0.75"
serde_with = "1.11.0"
thiserror = "1.0.30"
