[package]
name = "rmk-notebook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
byteorder = "1"
log = "0.4"
lopdf = "0.27"
pretty_env_logger = "0.4"
serde = { version = "1", features = ["serde_derive"] }
serde_json = "1"
serde_with = "1"
thiserror = "1"
